Videos from youtube

--- a/content/post/Заявка.md
+++ b/content/post/Заявка.md
@@ -35,3 +35,6 @@ title = "Начало практики"
 Если у вас, друзья, есть надоевшие проблемы в жизни, деятельности, недовольство собой, другими, результатами, отношениями, то у всего этого корни могут находиться в неожиданных местах. Которые возможно проявить, прожить, измениться и жить более счастливую жизнь!
 Обращайтесь!  
 И не забывайте свои корни, кем бы вы ни были, и все однажды получится!
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LLbrkZE_7Ko" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/J3grhAJCTj4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
